@@ -24,6 +24,7 @@ production.
   items to show by default on query pages (special pages such as Whatlinkshere).
 * (bug 32470) Increase the length of ug_group.
 * (bug 32239) Removed wgEnableTooltipsAndAccesskeys.
+* Removed $wgVectorShowVariantName.
 
 === New features in 1.19 ===
 * (bug 19838) Possibility to get all interwiki prefixes if the interwiki
